# algorithmsofdatascience

./: AlgOfDataScience,_Deliverable_1.ipynb  AlgOfDataScience,_Deliverable_2  AlgorithimDataScience,_Session_1.ipynb  Project1AppLink.md
Project1/: AlgOfDataScience,_Deliverable_1.ipynb  AlgorithimDataScience,_Session_1.ipynb  CLAUDE.md
Project1/deliverable/project_1/: .gitignore  main.py  pyproject.toml  requirements.txt
Project2/: .env.example  .gitignore  APP_LINK.md  CONVERSATION_EXAMPLE.md  DEPLOYMENT_GUIDE.md  README.md  README_STREAMLIT.md  chat.py  customer_service_bots.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
Project2/.streamlit/: secrets.toml.example
Project2/agents/: alex.agent.json  sunny.agent.json
